--- a/index.html
+++ b/index.html
@@ -1461,6 +1461,7 @@
     <script src="./js/sonda520.js" defer></script>
     <script src="./js/sondarotativa.js" defer></script>
 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -1820,58 +1821,8 @@
             });
         }
 
-        // Función para generar el PDF
-        function generatePDF(formId) {
-            const { jsPDF } = window.jspdf;
-
-            // Convertir solo los inputs de Horímetro a spans antes de generar el PDF
-            convertHorimetroInputsToSpans(formId);
-
-            // Selecciona el contenedor del formulario que deseas exportar
-            const content = document.getElementById(formId);
-
-            // Configura las dimensiones para una página A4 (210mm x 297mm)
-            const a4Width = 210; // Ancho en mm
-            const a4Height = 297; // Alto en mm
-
-            // Usa html2canvas para capturar el contenido ajustado
-            html2canvas(content, { scale: 1 }).then(canvas => {
-                const pdf = new jsPDF('portrait', 'mm', 'a4'); // Configuración para A4 vertical
-
-                // Obtener dimensiones de la imagen
-                const imgWidth = a4Width;
-                const imgHeight = (canvas.height * a4Width) / canvas.width;
-
-                let remainingHeight = imgHeight;
-                let position = 0;
-
-                // Ajustar y agregar imagen al PDF
-                while (remainingHeight > 0) {
-                    const canvasData = canvas.toDataURL('image/png', 1.0);  // Convertir el canvas a imagen
-
-                    pdf.addImage(canvasData, 'PNG', 0, position, imgWidth, imgHeight);
-                    remainingHeight -= a4Height; // Ajustar la altura restante
-
-                    if (remainingHeight > 0) {
-                        pdf.addPage();  // Agregar nueva página si queda contenido
-                        position -= a4Height;  // Ajustar la posición
-                    }
-                }
-
-                // Guardar el PDF
-                const year = new Date().getFullYear();
-                pdf.save(`Checklist_${formId}_${year}.pdf`);
-
-                // Restaurar los inputs de Horímetro después de generar el PDF
-                restoreHorimetroInputs(formId);
-            });
-        }
-
-
-
-
-
     </script>
+    <script src="./js/exportToPDF.js" defer></script>
 </body>
 
 </html>
