--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="CAMINHÃO-SONDA" class="checklist-section">
         <div class="checklist-header">
             <div class="logo">
-                <img src="" alt="Alcoa Logo">
+                <img src="imagenes/Alcoalogo.png" alt="Alcoa Logo">
             </div>
             <div class="header-info">
                 <table>
@@ -345,7 +345,7 @@
     <div id="autoAvaliacaoForm" class="checklist-section" style="display: none;">
         <div class="checklist-header">
             <div class="logo">
-                <img src="" alt="Alcoa Logo">
+                <img src="imagenes/Alcoalogo.png" alt="Alcoa Logo">
             </div>
             <div class="header-info">
                 <table>
@@ -576,7 +576,7 @@
     <div id="compressor" class="checklist-section">
         <div class="checklist-header">
             <div class="logo">
-                <img src="" alt="Alcoa Logo">
+                <img src="imagenes/Alcoalogo.png" alt="Alcoa Logo">
             </div>
             <div class="header-info">
                 <table>
@@ -878,7 +878,7 @@
     <div id="sondaDb520" class="checklist-section">
         <div class="checklist-header">
             <div class="logo">
-                <img src="" alt="Alcoa Logo">
+                <img src="imagenes/Alcoalogo.png" alt="Alcoa Logo">
             </div>
             <div class="header-info">
                 <table>
@@ -1176,7 +1176,7 @@
     <div id="sondaRotativa" class="checklist-section">
         <div class="checklist-header">
             <div class="logo">
-                <img src="" alt="Alcoa Logo">
+                <img src="imagenes/Alcoalogo.png" alt="Alcoa Logo">
             </div>
             <div class="header-info">
                 <table>
@@ -1467,58 +1467,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            const logoImgs = document.querySelectorAll(".logo img");
-
-            // Función para cargar el archivo base64
-            function loadBase64Image(url, callback) {
-                const xhr = new XMLHttpRequest();
-                xhr.onload = function () {
-                    // El contenido del archivo base64 es texto plano
-                    const base64Data = xhr.responseText.trim();
-                    callback(base64Data);
-                };
-                xhr.open('GET', url);
-                xhr.send();
-            }
-
-            // Llama a la función con la URL del archivo base64
-            loadBase64Image('imagenes/logo.base64', function (base64Image) {
-                logoImgs.forEach(img => {
-                    img.src = 'data:image/png;base64,' + base64Image;
-                });
-            });
-        });
-    </script>
-    <script>
-        let deferredPrompt;
-        const installButton = document.getElementById('installButton');
-
-        window.addEventListener('beforeinstallprompt', (e) => {
-            // Previene que el evento automático de instalación ocurra
-            e.preventDefault();
-            // Guarda el evento para usarlo después
-            deferredPrompt = e;
-            // Muestra el botón de instalación
-            installButton.style.display = 'block';
-        });
-
-        installButton.addEventListener('click', (e) => {
-            // Oculta el botón de instalación
-            installButton.style.display = 'none';
-            // Muestra el prompt de instalación
-            deferredPrompt.prompt();
-            deferredPrompt.userChoice.then((choiceResult) => {
-                if (choiceResult.outcome === 'accepted') {
-                    console.log('El usuario aceptó la instalación');
-                } else {
-                    console.log('El usuario rechazó la instalación');
-                }
-                deferredPrompt = null;
-            });
-        });
-
-        window.addEventListener('appinstalled', (evt) => {
-            console.log('PWA instalada con éxito');
         });
     </script>
 
@@ -1545,7 +1493,7 @@
             document.getElementById('datePicker1').value = "2024-05-02";
             document.getElementById('revSelect1').value = "01";
 
-            document.getElementById('datePicker2').value = "2024-03-8";
+            document.getElementById('datePicker2').value = "2024-03-08";
             document.getElementById('revSelect2').value = "00";
 
             document.getElementById('datePicker3').value = "2024-03-14";
